--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "license": "ISC",
   "dependencies": {
     "inquirer": "^8.2.4",
-    "jest": "^29.5.0",
+    "jest": "^29.5.0"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.22"
   }
 }
